--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </head>
 <body>
 
-<div id="main">
+
     <nav>
        <div class="title">
            <div class="reservia-logo">
-               <img src="Reservia.svg"alt="logo-reservia">
+               <img src="Reservia.svg" alt="logo-reservia">
            </div>
               <div class="menu-nav-1">
                 <div class="hebergement"><a href="#Hebergement">hébergment</a></div>
@@ -25,6 +25,8 @@
                    <div class="inscrire"> <a href="#"> s'inscrire</a></div>            
                  </div>
        </div>
+    </div>
+<div id="main">
 <div id="head">
     <div class="element01">
 <h1>Trouvez votre hébergement pour des vacances de rêves</h1>
@@ -55,29 +57,28 @@
 <h2>Filtres</h2>
 <div class="list">
 <div class="list1"><i class="fas fa-money-bill-wave"></i><p>Economique</p></div>
-<div class="list2"><i class="fas fa-child"></i><p>Familial</P></div>
+<div class="list1"><i class="fas fa-child"></i><p>Familial</P></div>
 
-<div class="list3"><i class="fas fa-heart"></i><p>Romantique</p></div>
-<div class="list4"><i class="fas fa-dog"></i><p>Animaux Autorises</p></div>
+<div class="list1"><i class="fas fa-heart"></i><p>Romantique</p></div>
+<div class="list1"><i class="fas fa-dog"></i><p>Animaux Autorises</p></div>
 </div>
 </div>
-
 <div class="element05">
 <div class="info2">
 <i class="fas fa-info searchResultWrapiconIcon"></i></div>
 <p class="info3">Plus de 500 logements sont disponibles dans cette ville</p>
 </div>
 </div>
-</nav>
-<section>
-<div id="yazid">
 
-<div id="container">
+<section>
+<div id="container-father">
+
+<div id="container-child-1">
 <h3 id="Hebergement">Hébergements à Marseille</h3>
 
-<div id="conteneur">
+<div id="container-cd-1">
 
-    <div class="element">
+    <div class="container-element-1">
 <img src="0001.jpg"  alt="auberge le panier">
 <p><strong>Auberge le panier</strong><br>Nuit a partir de <strong>23$</strong></p>
 <div class="star2">
@@ -85,10 +86,10 @@
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
-        <span><i class="fas fa-star "></i></span>               
+              <i class="fas fa-star"></i>              
         </div>
 </div>
-    <div class="element"><img src="1111.jpg"  alt="hotel chez Amina">
+    <div class="container-element-1"><img src="1111.jpg"  alt="hotel chez Amina">
 <p><strong>Hotel ches amina</strong><br>Nuit a partir de 96<strong>$</strong></p>
 <div class="star2">
               <i class="fas fa-star"></i>
@@ -98,34 +99,34 @@
               <i class="fas fa-star "></i>              
 </div>       
 </div>
-    <div class="element"><img src="0005.jpg"  alt="auberge la canneliers">
+    <div class="container-element-1"><img src="0005.jpg"  alt="auberge la canneliers">
 <p><strong>Auberge la canneliers</strong><br>Nuit a partir de <strong>90$</strong></p>
 <div class="star2">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
-        <span><i class="fas fa-star "></i></span>               
+              <i class="fas fa-star "></i>               
             </div></div>
-    <div class="element"><img src="0002.jpg"  alt="hotel du port">
+    <div class="container-element-1"><img src="0002.jpg"  alt="hotel du port">
 <p><strong>Hotel du port</strong><br>Nuit a partir de 52<strong>$</strong></p>
 <div class="star2">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
-         <span><i class="fas fa-star"></i>
-              <i class="fas fa-star "></i></span>               
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star "></i>              
             </div></div>
-    <div class="element"><img src="1234.jpg"  alt="auberge de la mer">
+    <div class="container-element-1"><img src="1234.jpg"  alt="auberge de la mer">
 <p><strong>Auberge de la mer</strong><br>Nuit a partir de 46<strong>$</strong></p>
 <div class="star2">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
-        <span><i class="fas fa-star"></i>
-              <i class="fas fa-star "></i></span>               
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star "></i>          
        </div></div>
-    <div class="element"><img src="0000.jpg"  alt="auberge
+    <div class="container-element-1"><img src="0000.jpg"  alt="auberge
 la canneliere">
 <p> <strong>Auberge la cannebiere</strong><br>Nuit a partir de <strong>25$</strong></p>
 <div class="star2">
@@ -140,41 +141,41 @@ la canneliere">
 <h3>Afficher plus</h3>
 </div>
 
-<div id="yijiao">
+<div id="container-child-2">
 <div class="graph">
 <h3>les plus populaire</h3>
 <i class="fas fa-chart-line"></i></div>
-<div class="elem11">
-    <div class="element11">
+<div class="container-cd-2">
+    <div class="container-element-2">
 <Img src="1223.jpg"  alt="hotel soleil du matin">
 <div class="wax">
 <p><strong>Hotel soleil du<br>matin <br></strong>nuit a prtir de <strong>128$</strong></p>
 <div class="star1">
+              <i class="fas fa-star color-red"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
-              <i class="fas fa-star"></i>
-              <i class="fas fa-star "></i>           
+              <i class="fas fa-star"></i>           
             </div>
   </div>
 
 </div>
-    <div class="element11">
+    <div class="container-element-2">
 
 <Img src="999.jpg"  alt="au coeur de l'eau chambre d'hotes">
 <div class="wax">
 <p><strong>Au coeur de l'eau<br> chambres d'hotes<br></strong>nuit  a prtir de <strong>71$</strong></p>
 <div class="star1">
+              <i class="fas fa-star star-red"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
-        <span><i class="fas fa-star"></i></span>
               
             </div>
 </div>
 </div>
-    <div class="element11"> 
+    <div class="container-element-2"> 
 
 <Img src="2222.jpg"  alt="hotel tout blue et blanc">
 <div class="wax">
@@ -183,8 +184,8 @@ la canneliere">
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
               <i class="fas fa-star"></i>
-         <span><i class="fas fa-star"></i>
-              <i class="fas fa-star "></i></span>               
+              <i class="fas fa-star"></i>
+              <i class="fas fa-star "></i>              
             </div>
 </div>
 </div>
@@ -194,9 +195,9 @@ la canneliere">
 </div>
 </section>
 <section>
-<div class="wrapper1">
+<div class="wrapper-father">
 <h2 id="activites">Activités à Marseille</h2>
-<div class="wrapper">
+<div class="wrapper-child">
   <div class="one"><img src="3333.jpg" alt="port"><p>Vieux Port</p></div>
   <div class="two"><img src="444.jpg" alt="ile"><p>Île du Frioul</p></div>
   <div class="three"><img src="555.jpg" alt="fort"><p>Fort de Pomègues</p></div>
@@ -210,8 +211,8 @@ la canneliere">
 
 <footer>
 <div id="footer">
-   <div class="footer1">
-    <div class="element5"> 
+   <div class="footer-cd">
+    <div class="footer-cd-1"> 
                      <h3>A propos</h3>
                 <ul>
                     <li><a href="#">Fonctionnement du site</a></li>
@@ -219,14 +220,14 @@ la canneliere">
                     <li><a href="#">Données et confidentialité</a></li> 
                  </ul>                            
     </div>
-     <div class="element5">      
+     <div class="footer-cd-1">      
                      <h3>Nos hébergements</h3>
                 <ul>
                     <li><a href="#">Charte qualité</a></li>
                     <li><a href="#">Soumettre votre hôtel</a></li>
                 </ul>
 </div>
-    <div class="element5">
+    <div class="footer-cd-1">
                       <h3>Assistance</h3>
                 <ul>
                     <li><a href="#">Centre d'aide</a></li>
