--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html >
-<html lang="en">
+<html lang="fr">
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -15,14 +15,14 @@
     <nav>
        <div class="title">
            <div class="reservia-logo">
-               <img src="Reservia.svg" alt="logo-reservia">
+               <img src="reservia.svg" alt="logo-reservia">
            </div>
               <div class="menu-nav-1">
-                <div class="hebergement"><a href="#Hebergement">hébergment</a></div>
+                <div class="hebergement"><a href="#hebergement">Hébergment</a></div>
                 <div class="activites"><a href="#activites">Activites</a></div>
                  </div>
                  <div class="menu-nav-2">
-                   <div class="inscrire"> <a href="#"> s'inscrire</a></div>            
+                   <div class="inscrire"> <a href="#"> S'inscrire</a></div>            
                  </div>
        </div>
     </nav>
@@ -39,7 +39,7 @@
 </div>
 
 <div class="recherche"> 
-<input type="text"  value="" placeholder="marseille France">
+<input type="text"  value="" placeholder="Marseille France">
 </div>
 <div class="bouton">
 <i class=" fas fa-search"></i>
@@ -65,7 +65,7 @@
 </div>
 <div class="element05">
 <div class="info2">
-<i class="fas fa-info searchResultWrapiconIcon"></i></div>
+<i class="fas fa-info searchresultWrapiconicon"></i></div>
 <p class="info3">Plus de 500 logements sont disponibles dans cette ville</p>
 </div>
 </div>
@@ -74,7 +74,7 @@
 <div id="container-father">
 
 <div id="container-child-1">
-<h3 id="Hebergement">Hébergements à Marseille</h3>
+<h3 id="hebergement">Hébergements à Marseille</h3>
 
 <div id="container-cd-1">
 
@@ -83,58 +83,58 @@
 <p><strong>Auberge le panier</strong><br>Nuit a partir de <strong>23$</strong></p>
 <div class="star2">
               <i class="fas fa-star" style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#F2F2F2;"></i>              
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#F2F2F2;"></i>              
         </div>
 </div>
     <div class="container-element-1"><img src="1111.jpg"  alt="hotel chez Amina">
 <p><strong>Hotel ches amina</strong><br>Nuit a partir de 96<strong>$</strong></p>
 <div class="star2">
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#F2F2F2;"></i>              
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#F2F2F2;"></i>              
 </div>       
 </div>
     <div class="container-element-1"><img src="0005.jpg"  alt="auberge la canneliers">
 <p><strong>Auberge la canneliers</strong><br>Nuit a partir de <strong>90$</strong></p>
 <div class="star2">
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#F2F2F2;"></i>               
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#F2F2F2;"></i>               
             </div></div>
     <div class="container-element-1"><img src="0002.jpg"  alt="hotel du port">
 <p><strong>Hotel du port</strong><br>Nuit a partir de 52<strong>$</strong></p>
 <div class="star2">
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star "style=" Color:#F2F2F2;"></i>              
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#F2F2F2;"></i>              
             </div></div>
     <div class="container-element-1"><img src="1234.jpg"  alt="auberge de la mer">
 <p><strong>Auberge de la mer</strong><br>Nuit a partir de 46<strong>$</strong></p>
 <div class="star2">
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#F2F2F2;"></i>
-              <i class="fas fa-star"style=" Color:#F2F2F2;"></i>          
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#F2F2F2;"></i>
+              <i class="fas fa-star" style=" Color:#F2F2F2;"></i>          
        </div></div>
     <div class="container-element-1"><img src="0000.jpg"  alt="auberge
 la canneliere">
 <p> <strong>Auberge la cannebiere</strong><br>Nuit a partir de <strong>25$</strong></p>
 <div class="star2">
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star "style=" Color:#F2F2F2;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#F2F2F2;"></i>
         </div></div>
     
 </div>
@@ -151,11 +151,11 @@ la canneliere">
 <div class="wax">
 <p><strong>Hotel soleil du<br>matin <br></strong>nuit a prtir de <strong>128$</strong></p>
 <div class="star1">
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#F2F2F2;"></i>           
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#F2F2F2;"></i>           
             </div>
   </div>
 
@@ -166,11 +166,11 @@ la canneliere">
 <div class="wax">
 <p><strong>Au coeur de l'eau<br> chambres d'hotes<br></strong>nuit  a prtir de <strong>71$</strong></p>
 <div class="star1">
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#F2F2F2;"></i>
-              <i class="fas fa-star"style=" Color:#F2F2F2;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#F2F2F2;"></i>
+              <i class="fas fa-star" style=" Color:#F2F2F2;"></i>
               
             </div>
 </div>
@@ -181,11 +181,11 @@ la canneliere">
 <div class="wax">
 <p><strong>Hotel tout blue et<br> blanc <br></strong>nuit a prtir de <strong>68$</strong></p>
 <div class="star1">
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>
-              <i class="fas fa-star"style=" Color:#0065FC;"></i>              
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>
+              <i class="fas fa-star" style=" Color:#0065FC;"></i>              
             </div>
 </div>
 </div>
